methods.basics.MethodsDogHouse.scala.error
Compilation error:
MethodsDogHouse:13: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime2.MethodsDogHouse'
	override def run() {
                     ^