methods.basics.MethodsDogHouse.scala.code
def dogHouse() {
  avance();avance();gauche()
}

override def run() {
	for (compteur <-1 to 4) {
    dogHouse()
  }  
}
